mdapi/Custom/objects/Acq_EMD__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Acq EMDs</relationshipLabel>
        <relationshipName>Acq_EMDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Account_Name__c</fullName>
        <label>Beneficiary Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Bank__c</fullName>
        <label>Beneficiary Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Type__c</fullName>
        <formula>Pipeline__r.Bid_Type__c</formula>
        <label>Bid Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_EMD_Received_Amount__c</fullName>
        <label>Cancelled EMD Received Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Complete_Address__c</fullName>
        <formula>Address__r.Street__c &amp;&apos;, &apos;&amp; Address__r.City__c &amp;&apos;, &apos;&amp; IF(Address__r.State__r.Name = &apos;&apos;, &apos;&apos;, Address__r.State__r.Name &amp;&apos;, &apos;) &amp; Address__r.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dir_IMG_EMD_Approval_Date__c</fullName>
        <label>Dir IMG EMD Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Director_IMG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director IMG</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acq_EMDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMD_Amount__c</fullName>
        <label>EMD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMD_Approval_Requested_Date__c</fullName>
        <label>EMD Approval Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMD_Balance_Due__c</fullName>
        <formula>EMD_Amount__c  -  Cancelled_EMD_Received_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMD Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMD_Due_Date__c</fullName>
        <label>EMD Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMD_Receipt_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EMD Receipt Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMD_Requested_Date__c</fullName>
        <label>EMD Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EM_Status__c</fullName>
        <label>EM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Receipt Details</fullName>
                </value>
                <value>
                    <fullName>EMD Cancelled Pending</fullName>
                </value>
                <value>
                    <fullName>EMD Cancelled Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escrow_Amount__c</fullName>
        <formula>Pipeline__r.Escrow_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escrow Amount (From Broker)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escrow_Cancelled_Date__c</fullName>
        <label>Escrow Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escrow_Cancelled_Reason__c</fullName>
        <label>Escrow Cancelled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Rehab Budget</fullName>
                </value>
                <value>
                    <fullName>HOA Issues</fullName>
                </value>
                <value>
                    <fullName>Title Issues</fullName>
                </value>
                <value>
                    <fullName>Seller Cancels</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escrow_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escrow Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Acq EMDs (Escrow Company)</relationshipLabel>
        <relationshipName>Acq_EMDs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Escrow_Close_Date__c</fullName>
        <formula>Pipeline__r.Expected_Escrow_Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Escrow Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fed_Ref_ID__c</fullName>
        <label>Fed Ref ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Acq EMDs</relationshipLabel>
        <relationshipName>Acq_EMDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pipeline_Status__c</fullName>
        <formula>Text(Pipeline__r.Pipeline_Status__c)</formula>
        <label>Pipeline Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pipeline ID</label>
        <referenceTo>AcqPipeline__c</referenceTo>
        <relationshipLabel>Acq EMDs</relationshipLabel>
        <relationshipName>Acq_EMDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>Address__r.City__c</formula>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>Address__r.State__r.Name</formula>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <formula>Address__r.Street__c</formula>
        <label>Property Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <formula>Address__r.Zip__c</formula>
        <label>Property Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_Entity__c</fullName>
        <formula>Market__r.Purchasing_Entity__c</formula>
        <label>Purchasing Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVP_IMG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SVP IMG</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acq_EMDs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SentMails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SentMails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Closer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closer IMG</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acq_EMDs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wire_Reference_No__c</fullName>
        <label>Wire Reference No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>doEMDApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>doEMDApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>doSubmit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>doSubmit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Acq EMD</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Complete_Address__c</columns>
        <columns>EM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EMD-{0000}</displayFormat>
        <label>EMD ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acq EMDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Escrow_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
								NOT(ISBLANK(Dir_IMG_EMD_Approval_Date__c)),
        ISCHANGED(EMD_Amount__c)
								)</errorConditionFormula>
        <errorMessage>Cannot  change EMD Amount after approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Receipt_Details</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     ISBLANK(Dir_IMG_EMD_Approval_Date__c),			
	    EMD_Receipt_Received__c = True
					)</errorConditionFormula>
        <errorMessage>Cannot order Receipt details unless the approval is complete</errorMessage>
    </validationRules>
</CustomObject>